# RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: BoundingBox.hpp  CUDA.h  CUDAScene.hpp  CUDAShape.hpp  Camera.hpp  Color.hpp  Exception.hpp  Hit.hpp  IIntersectable.hpp  Image.hpp  Intersection.hpp  Light.hpp  Line2.hpp  Material.hpp  OBJ_Loader.h  Plane.hpp  Point.hpp  Polygon.hpp  PrecisionFraction.hpp  Ray.hpp  Ray2.hpp  RenderKernel.h  SafeDivision.hpp  Scene.hpp  Shape.hpp  Shapeset.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  fEquals.hpp  shape.hpp
src/: BoundingBox.cpp  CUDA.cu  CUDAScene.cpp  CUDAShape.cpp  CUDAShape.cu  Camera.cpp  Color.cpp  Image.cpp  Intersection.cpp  Light.cpp  Line2.cpp  Material.cpp  Plane.cpp  Point.cpp  Polygon.cpp  PrecisionFraction.cpp  Ray.cpp  Ray2.cpp  RenderKernel.cu  Scene.cpp  Shapeset.cpp  Sphere.cpp  Triangle.cpp  Vector.cpp  Vector2.cpp  Vector3.cpp  main.cpp  main.cu
